peasant priv part 2
todo
- decision ones
- exclusive ones

--- a/localisation/TD_peasants_l_english.yml
+++ b/localisation/TD_peasants_l_english.yml
@@ -65,3 +65,16 @@
  monopoly_privileges.13.t: "Extension of the Monopoly on Grain"
  monopoly_privileges.13.d: "The monopoly on grain we granted to the [Root.GetPeasantryName] has expired, meaning that we are now able to reclaim the income from grain farming. However, the [Root.GetPeasantryName] are keen to keep their privileges and are offering to pay us a lump sum in return for the monopoly being guaranteed for a further 10 years."
  monopoly_privileges.13.b.tooltip: "We will be able to revoke the §YMonopoly on Grain§! estate privilege."
+
+ estate_peasants_freedom_of_movement: "Allow [Root.GetPeasantryName] Economic Freedom"
+ estate_peasants_freedom_of_movement_desc: "allow them to move"
+ estate_peasants_freedom_of_movement_disloyal: "Freedom of Movement"
+ estate_peasants_freedom_of_movement_neutral: "Freedom of Movement"
+ estate_peasants_freedom_of_movement_loyal: "Freedom of Movement"
+
+ estate_peasants_promote_local_peasant_goods: "Promote Local Peasant Goods"
+ estate_peasants_promote_local_peasant_goods_desc: "buy polish"
+ estate_peasants_promote_local_peasant_goods_scaling: "Promoting Local Peasant Goods"
+
+ estate_peasants_sunday_schools: "Sunday Schools"
+ estate_peasants_sunday_schools: "give them smart"
