hestan NIs and small fix

--- a/localisation/TD_religion_l_english.yml
+++ b/localisation/TD_religion_l_english.yml
@@ -87,7 +87,7 @@
  musarfic_folklore_rebels_demand: "Convert $COUNTRYNAME$"
 
  ilumist: "Ilumist"
- ilumist_religion_desc: "Ilumists are the followers of god Ilum who sents prophets on earth to teach people about pious and good life. Members of this church follow only a specific set of prophets which hasn't change for past 2000 years."
+ ilumist_religion_desc: "Ilumists are the followers of god Ilum who sents prophets on earth to teach people about pious and good life. Members of this church follow only a specific set of prophets which hasn't changed for past 2000 years."
  tahimali: "Tahimali"
  ilumist_rebels_demand_desc: "The religious rebels fight for the $RELIGION$ religion. They demand that we recognize its supremacy or at the very least cease our efforts to convert them and let them worship in peace."
  ilumist_rebels_title: "Religious"
