privs - final ones

--- a/localisation/TD_peasants_l_english.yml
+++ b/localisation/TD_peasants_l_english.yml
@@ -77,4 +77,19 @@
  estate_peasants_promote_local_peasant_goods_scaling: "Promoting Local Peasant Goods"
 
  estate_peasants_sunday_schools: "Sunday Schools"
- estate_peasants_sunday_schools: "give them smart"
+ estate_peasants_sunday_schools_desc: "give them smart"
+ 
+ estate_peasant_appeasement: "Peasant Appeasement"
+ estate_peasant_appeasement_desc: "give them mamoney"
+ estate_peasants_appeasement_title: "[Root.GetPeasantryName] Appeasement"
+ estate_peasants_appeasement_desc: "We can stop rebellions brewing by giving funds to [Root.GetPeasantsName]."
+ enable_estate_action_APPEASE_PEASANTS_tt: "Enable the estate decision §Y[Root.GetPeasantryName]: [Root.GetPeasantryName] Appeasement§!"
+
+ estate_peasants_secular_taxation: "Secular Taxation"
+ estate_peasants_secular_taxation_desc: "skip the church"
+ estate_peasants_secular_taxation_disloyal: "Secular Taxation"
+ estate_peasants_secular_taxation_neutral: "Secular Taxation"
+ estate_peasants_secular_taxation_loyal: "Secular Taxation"
+
+ estate_peasants_peoples_legions: "Peoples Legions"
+ estate_peasants_peoples_legions_desc: "march peasants"
