--- a/localisation/TD_peasants_l_english.yml
+++ b/localisation/TD_peasants_l_english.yml
@@ -14,6 +14,7 @@
 
  estate_peasants_develop_x: "Increase Development in [agenda_province.GetName]"
  estate_peasants_develop_x_desc: "Increasing the development and standard of living of our people in [agenda_province.GetName] would only serve to further our own goals and prosperity."
+ estate_peasants_develop_x_tt: "Development at least §Y[agenda_province.province_dev_var.GetValue]§!"
 
  estate_peasants_increase_autonomy_in_province_x: "Peasants Demand Autonomy"
  estate_peasants_increase_autonomy_in_province_x_desc: "Local peasants from one of our provinces sent us a petition to increase autonomy of their region."
