--- a/localisation/TD_peasants_l_english.yml
+++ b/localisation/TD_peasants_l_english.yml
@@ -95,3 +95,27 @@
 
  estate_peasants_peoples_legions: "People's Legions"
  estate_peasants_peoples_legions_desc: "march peasants"
+
+ peasant_status: "Peasant Status"
+ mechanic_disables_peasants_estate_yes: "Disables §YPeasant§! estate."
+
+ peasant_liberation_reform: "Peasant Liberation"
+ peasant_liberation_reform_desc: "i hate slavery"
+ 
+ state_enforced_serfdom_reform: "State Enforced Serfdom"
+ state_enforced_serfdom_reform_desc: "i love free workers"
+
+ idyllic_non_interference_reform: "Idyllic Non Interference"
+ idyllic_non_interference_reform_desc: "Pan Tadeusz"
+ 
+ right_by_wealth_reform: "Right by Wealth"
+ right_by_wealth_reform_desc: "get money"
+ mechanic_peasant_trade_boost_building_yes: "Every owned province with §YTrade Buildings§! gets the following bonus:\nLocal Trade Power: §G+25%§!"
+ peasant_trade_boost: "Peasant Trade Boost"
+ desc_peasant_trade_boost: "This province benefits from societal advancements."
+
+ rural_cooperation_reform: "Rural Cooperation"
+ rural_cooperation_reform_desc: "let us be friends"
+ mechanic_rural_gov_cap_reduction_boost_yes: "Every owned §YFarmlands§! province or §YGrain§! or §YLivestock§! producing province gets the following bonus:\nProvince Governing Cost: §G-15%§!"
+ rural_gov_cap_reduction: "Rural Governing Capacity Reduction"
+ desc_rural_gov_cap_reduction: "This province benefits from cooperation between nobility and peasantry."
