--- a/localisation/TD_peasants_l_english.yml
+++ b/localisation/TD_peasants_l_english.yml
@@ -119,3 +119,15 @@
  mechanic_rural_gov_cap_reduction_boost_yes: "Every owned §YFarmlands§! province or §YGrain§! or §YLivestock§! producing province gets the following bonus:\nProvince Governing Cost: §G-15%§!"
  rural_gov_cap_reduction: "Rural Governing Capacity Reduction"
  desc_rural_gov_cap_reduction: "This province benefits from cooperation between nobility and peasantry."
+
+ estate_peasants_disaster: "Commoner Coup"
+ EST_CRUSHED_PEASANTS: "The Peasants have been curtailed"
+ estate_disasters.11.t: "The $ESTATE_PEASANTS$ Seize Power"
+ estate_disasters.11.d: "$MONARCH$ has allowed the $ESTATE_PEASANTS$ of $COUNTRY$ to grow too powerful and now they have made their move. Making use of their many hard-earned privileges as well as the many debts owed to them, they have effectively seized the reins of government and turned the $MONARCHTITLE$ into little more than their puppet."
+ estate_disasters.11.a: "We should have seen this coming..."
+ estate_disasters.11.a.tt: "[Root.GetName] will now be controlled by the §YPeasants§! until the §Y'Curtail the Peasantry'§! decision is taken."
+ estate_disasters.100.t: "The [Root.GetPeasantryName] Curtailed"
+ estate_disasters.100.d: "We have finally managed to break our reliance on the [Root.GetPeasantryName], reclaiming control over all important state functions and reducing these peddlers to their rightful confines within the city walls."
+ estate_disasters.100.a: "The $MONARCHTITLE$ is back in control."
+ curtail_estate_peasants_title: "Curtail the Peasantry"
+ curtail_estate_peasants_desc: "kill them all todo"
