--- a/localisation/TD_peasants_l_english.yml
+++ b/localisation/TD_peasants_l_english.yml
@@ -1,6 +1,6 @@
 ﻿l_english:
  estate_peasants: "Peasantry" #do not fucking change this
- estate_peasants_desc: "This estate represents peasants."
+ estate_peasants_desc: "This estate represents the rural landowners and village leaders who speak from the peasantry. They work in farms, mines and other large scale manual labour jobs, keeping the country well supplied with basic goods. They expect to be represented in the matters of state and desire to not be oppressed by the wealthier populace."
 
  string_peasantry_this: "[This.GetPeasantryName]"
  country_estate_peasants_name: "[This.GetPeasantryName]"
