--- a/localisation/TD_peasants_l_english.yml
+++ b/localisation/TD_peasants_l_english.yml
@@ -116,7 +116,7 @@
 
  rural_cooperation_reform: "Rural Cooperation"
  rural_cooperation_reform_desc: "Camaria is famous for its cooperation between nobility and peasantry, the same fields that are being worked by peasants are also worked by nobles. We can propagate their friendship even more which will allow us to govern fields more easily, but in cost of less power over them."
- mechanic_rural_gov_cap_reduction_boost_yes: "Every owned §YFarmlands§! province or §YGrain§! or §YLivestock§! producing province gets the following bonus:\nProvince Governing Cost: §G-15%§!"
+ mechanic_rural_gov_cap_reduction_boost_yes: "Every owned province which is §YFarmlands§! terrain or is producing either §YGrain§! or §YLivestock§! will get following bonus:\nProvince Governing Cost: §G-15%§!"
  rural_gov_cap_reduction: "Rural Governing Capacity Reduction"
  desc_rural_gov_cap_reduction: "This province benefits from cooperation between nobility and peasantry."
 
