--- a/localisation/TD_01_flavour_hestan_l_english.yml
+++ b/localisation/TD_01_flavour_hestan_l_english.yml
@@ -14,7 +14,7 @@
  ehwitraw_prosperity_of_fadi: "Prosperity of the Fadi"
  ehwitraw_prosperity_of_fadi_desc: "The long and wide river of Fadi is and always was the backbone of our civilization. Thanks to the early adoption of advanced irrigation we managed to increase the much required food production even more, concentrating the vast majority of our population along this great river."
  ehwitraw_western_trade: "Western Trade"
- ehwitraw_western_trade_desc: "Thanks to the abundance of grain, our merchants often sell it to distant lands in order to exchange it for variety of exotic goods. Recently, the rising prices of grain in the west led to our merchants being much more eager to interact with Kakigians and Taedians, who are now much more desperate for our high quality wheat."
+ ehwitraw_western_trade_desc: "Thanks to the abundance of grain, our merchants often sell it to distant lands in order to exchange it for variety of exotic goods. Recently, the rising prices of grain in the west led to our merchants being much more eager to interact with Kakigians and Mysentrians, who are now much more desperate for our high quality wheat."
  ehwitraw_desert_raiders: "Desert Raiders"
  ehwitraw_desert_raiders_desc: "The Magraag desert is mostly populated by disorganized nomads who roam the desert thanks to their well trained camels. Despite their disconnection from the outside world majority of the time, in times of war of conflict they serve our ruler and our gods in order to protect their land."
  ehwitraw_naval_domination: "Naval Domination"
