--- a/localisation/TD_01_flavour_merhaan_l_english.yml
+++ b/localisation/TD_01_flavour_merhaan_l_english.yml
@@ -100,7 +100,7 @@
  merhaan.1004.desc: "Our shamans found out that not everyone living in Mysentria believes in authority of Saelius. These faiths were fading away because of mass convertions to Saelianism. Integrating them into our church made us preserve these local faiths and document their knowledge that is unique for them."
  merhaan.1004.a: "Closer to truth"
  harmonized_samadio_taedian: "Harmonized Samadio-Mysentrian"
- desc_harmonized_samadio_taedian: "We have succesfully harmonized with Samadio-Taedians"
+ desc_harmonized_samadio_taedian: "We have succesfully harmonized with Samadio-Mysentrians"
 
  merhaan.1005.t: "Harmonization of Anhativaz Faiths"
  merhaan.1005.desc: "Traditions of Anhativaz faiths goes back to first Zakarturi Empire, their obsession about chronicling their past and remembering about their old glory allows us to get look into older times. Now we have access to their libraries and their chroniclers, with them our knowledge will never die."
