--- a/localisation/TD_01_flavour_visparaya_l_english.yml
+++ b/localisation/TD_01_flavour_visparaya_l_english.yml
@@ -25,7 +25,7 @@
  ahonyas_royal_asamanacs: "Royal Asamanacs"
  ahonyas_royal_asamanacs_desc: "The elite cavalrymen of Asamanacs are composed of rich nobles who can afford the best horses, armor and training necessary to protect our nusabate. This traditions stems even as far back as ancient Visparaya, but it had a great resurgence during the Varazahani period."
  ahnoyas_guns_and_cannons: "Guns and Cannons"
- ahnoyas_guns_and_cannons_desc: "Our military leaders adopted the gunpowder warfare quite early, even compared to the taedians. First cannons were used in XV century in wars against Ayanihat and later mounted onto the ships to fight against piracy. This brought a great deal of experience in dealing with this technology."
+ ahnoyas_guns_and_cannons_desc: "Our military leaders adopted the gunpowder warfare quite early, even compared to the Mysentrians. First cannons were used in XV century in wars against Ayanihat and later mounted onto the ships to fight against piracy. This brought a great deal of experience in dealing with this technology."
  ahnoyas_western_influence: "Western Influence"
  ahnoyas_western_influence_desc: "After the fall of Varazahani nusabate, most of the court and heritage remained in Azhishan. The late empire was greatly influenced by pamkusean and chilverchian arts and architecture, which can still be seen to this day while walking on the streets of our capital."
  ahnoyas_the_silk_trade: "The Silk Trade"
