--- a/localisation/TD_01_flavour_wasichantlia_l_english.yml
+++ b/localisation/TD_01_flavour_wasichantlia_l_english.yml
@@ -30,7 +30,7 @@
  xamaneh_instant_resupply: "Instant Resupply"
  xamaneh_instant_resupply_desc: "Our naval domination in the Atlaqotlatl Bay was made thanks to many naval innovations, but most importantly thanks to our small and mobile boats with low cargo storage, but supported by even smaller ships made specifically for resupplying."
  xamaneh_rulers_of_atlaqotlatl: "Rulers of Atlaqotlatl"
- xamaneh_rulers_of_atlaqotlatl_desc: "When People of Tonatitlan see a ship, they are sure that it is one of our own. We have an undisputed monopoly over any trade in this region and not even the Taedians will be able to break it."
+ xamaneh_rulers_of_atlaqotlatl_desc: "When People of Tonatitlan see a ship, they are sure that it is one of our own. We have an undisputed monopoly over any trade in this region and not even the Mysentrians will be able to break it."
  xamaneh_memories_of_easterners: "Memories of the Easterners"
  xamaneh_memories_of_easterners_desc: "Long time ago a large group of weird men came to our land, sailing on strange ships, speaking foreign language and wearing peculiar clothes. After some time it became apparent that they were the gods of death who brought with them weapons and diseases."
  
