--- a/localisation/TD_tradegoods_l_english.yml
+++ b/localisation/TD_tradegoods_l_english.yml
@@ -20,7 +20,7 @@
  iron: "Iron"
  ironDESC: "Iron represents not just iron, but other ferrous metals and the production of alloys such as steel. Iron formed the basis of the metallurgical industry and was used extensively in the production of weapons and other military equipment."
  ivory: "Ivory"
- ivoryDESC: "Ivory was one of the main exports of Sahila apart from slaves. It was highly sought after by Taedians for use in various manufactured goods such as cutlery, gifts, small pieces of art, furniture, etc."
+ ivoryDESC: "Ivory was one of the main exports of Sahila apart from slaves. It was highly sought after by Mysentrians for use in various manufactured goods such as cutlery, gifts, small pieces of art, furniture, etc."
  naval_supplies: "Naval Supplies"
  naval_suppliesDESC: "Naval Supplies represent everything needed in ship construction, from basic wood to tar, ropes, linen, sails, and various other materials. Gyrdia and Marstonia were initially the main supplier until Chantlia became an alternate source of supply in the early 18th century. Colonial expansion into the New World was in part to secure supplies of such vital goods."
  salt: "Salt"
