--- a/localisation/TD_areas_l_english.yml
+++ b/localisation/TD_areas_l_english.yml
@@ -827,6 +827,10 @@
  doi_kyn_lan_area: "Doi Kyn Lan"
  chanh_den_area: "Chanh Den"
  cau_tram_area: "Cau Tram"
+ doi_trung_area: "Doi Trung"
+ mienh_cong_area: "Mienh Cong"
+ lang_mo_area: "Lang Mo"
+ bay_coast_area: "Bai Coast"
  cua_giao_area: "Cua Giao"
  nam_luy_area: "Nam Luy"
  song_den_area: "Song Den"
