--- a/localisation/TD_trade_companies_l_english.yml
+++ b/localisation/TD_trade_companies_l_english.yml
@@ -236,3 +236,6 @@
  cak_kecig_company: "Cak'kecig Company"
  TRADE_COMPANY_CAK_KECIG_Root_Culture_GetName: "[Root.Culture.GetName] Bkuslcuht Company"
  TRADE_COMPANY_CAK_KECIG_Trade_Company: "Bkuslcuht Trade Company"
+ kadapsuo_company: "Kadapsuo Company"
+ TRADE_COMPANY_KADAPSUO_Root_Culture_GetName: "[Root.Culture.GetName] Aiunusu Company"
+ TRADE_COMPANY_KADAPSUO_Trade_Company: "Aiunusu Trade Company"
