--- a/localisation/TD_tradenodes_l_english.yml
+++ b/localisation/TD_tradenodes_l_english.yml
@@ -1,5 +1,5 @@
 ﻿l_english:
- geoberic_bay_tradenode: "Geoberic Bay"
+ geoberic_bay_tradenode: "Bay of Callaina"
  niheyan_coast_tradenode: "Niheyan Coast"
  bogiland_tradenode: "Bogiland"
  ostsee_tradenode: "Ostsee"
