--- a/localisation/prov_names_adj_l_english.yml
+++ b/localisation/prov_names_adj_l_english.yml
@@ -109,7 +109,7 @@
  PROV_ADJ108: "108"
  PROV_ADJ109: "Wyrmegnac"
  PROV_ADJ110: "Dobutap"
- PROV_ADJ111: "Geoberic Bay" 
+ PROV_ADJ111: "Bay of Callaina" 
  PROV_ADJ112: "Banlathar"
  PROV_ADJ113: "Zaynashar Depths"
  PROV_ADJ114: "Guranamar"
