--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -109,7 +109,7 @@
  PROV108: "Ihol"
  PROV109: "Wyrmegnac"
  PROV110: "Dobutap"
- PROV111: "Geoberic Bay" 
+ PROV111: "Bay of Callaina" 
  PROV112: "Banlathar"
  PROV113: "Zaynashar Depths"
  PROV114: "Guranamar"
