--- a/localisation/TD_rebels_l_english.yml
+++ b/localisation/TD_rebels_l_english.yml
@@ -36,14 +36,14 @@
  sointuva_rebels_name: "Sointuva Rebels"
  achiqnay_rebels_name: "Achiqnay Rebels"
  agellidian_rebels_name: "Agellidian Rebels"
- gajifeng_spiritualism_rebels_name: "Gajifeng Spiritualism Rebels"
- khutigar_shamanism_rebels_name: "Bavganian Shamanism Rebels"
+ gajifeng_spiritualism_rebels_name: "Jipindip Rebels"
+ khutigar_shamanism_rebels_name: "Bavganian Rebels"
  wirosepan_rebels_name: "Wirosepan Rebels"
  xianga_rebels_name: "Xianga Rebels"
  xifang_rebels_name: "Xifang Rebels"
  zimahei_cult_rebels_name: "Zimahei Cult Rebels"
  aminian_pantheon_rebels_name: "Aminian Pantheon Rebels"
- bjateel_animism_rebels_name: "Bjateel Animism Rebels"
+ bjateel_animism_rebels_name: "Bjateelian Rebels"
  cach_moi_rebels_name: "Cách Mói Rebels"
  dejilobi_rebels_name: "Dejilobi Rebels"
  tamgarani_rebels: "Tamgarani Rebels"
