--- a/localisation/TD_religion_l_english.yml
+++ b/localisation/TD_religion_l_english.yml
@@ -127,7 +127,7 @@
  sointuva_rebels_army: "$RELIGION$ Army"
  sointuva_rebels_demand: "Convert $COUNTRYNAME$"
 
- khutigar_shamanism: "Bavganian Shamanism"
+ khutigar_shamanism: "Bavganian"
  khutigar_shamanism_religion_desc: "Various localized shamanistic beliefs of Bavgania, Khutigaria and Bugtang often revolve around forest spirits lead by the moon god."
  khutigar_shamanism_rebels_demand_desc: "The religious rebels fight for the $RELIGION$ religion. They demand that we recognize its supremacy or at the very least cease our efforts to convert them and let them worship in peace."
  khutigar_shamanism_rebels_title: "Religious"
@@ -420,7 +420,7 @@
 
  eastern_pagan: "Eastern Pagan"
 
- gajifeng_spiritualism: "Gajifeng Spiritualism"
+ gajifeng_spiritualism: "Jipindip"
  gajifeng_spiritualism_religion_desc: "Gajifeng Spiritualism is a bulk term for different sects and beliefs practiced by the Tsakung people in Dasenli and neighboring areas. They put a great importance in respecting the dead who are said to roam the countryside."
  gajifeng_spiritualism_rebels_demand_desc: "The religious rebels fight for the $RELIGION$ religion. They demand that we recognize its supremacy or at the very least cease our efforts to convert them and let them worship in peace."
  gajifeng_spiritualism_rebels_title: "Religious"
@@ -438,7 +438,7 @@
  dejilobi_rebels_demand: "Convert $COUNTRYNAME$" 
  henga: "Henga"
  
- bjateel_animism: "Bjateel Animism"
+ bjateel_animism: "Bjateelian"
  bjateel_animism_religion_desc: "Local Animism flavour that believe animals are aspects of gods. Do better Description (WIP)."
  bjateel_animism_rebels_demand_desc: "The religious rebels fight for the $RELIGION$ religion. They demand that we recognize its supremacy or at the very least cease our efforts to convert them and let them worship in peace."
  bjateel_animism_rebels_title: "Religious"
